--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -19,6 +19,9 @@
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important;
 }
+.u-margin-bottom-medium {
+  margin-bottom: 4rem !important;
+}
 
 .u-margin-top-big {
   margin-top: 8rem !important;
