--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,7 +5,7 @@
   // margin-top: -20rem;
 
   @include mqRespond(tab-port) {
-    padding: 20rem 0;
+    padding: 20rem 0 22rem;
     margin-top: -13vh;
   }
 }
