--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -44,3 +44,19 @@
     opacity: initial;
   }
 }
+
+@keyframes fromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+
+  80% {
+    transform: translateY(0.3rem);
+  }
+
+  100% {
+    transform: initial;
+    opacity: initial;
+  }
+}
