--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,7 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem;
-  overflow-x: hidden; }
+  padding: 3rem; }
   @media (max-width: 56.25em) {
     body {
       padding: 0; } }
@@ -436,7 +435,7 @@ body {
         left: 0;
         transform: initial;
         width: 100%;
-        padding: 5rem 4rem 4rem; }
+        padding: 4rem 4rem 3rem; }
       .card__price-box {
         margin-bottom: 1.5rem; }
       .card__price-only {
@@ -984,14 +983,16 @@ body {
 .section-tours {
   background-color: #f3f2f2;
   padding: 25rem 0 15rem;
-  margin-top: -10rem; }
+  margin-top: -10rem;
+  overflow-x: hidden; }
   @media (max-width: 56.25em) {
     .section-tours {
       padding: 20rem 0 10rem; } }
 
 .section-testimonials {
   position: relative;
-  padding: 15rem 0; }
+  padding: 15rem 0;
+  overflow-x: hidden; }
   @media (max-width: 56.25em) {
     .section-testimonials {
       padding: 10rem 0; } }
