--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,7 @@ body {
   top: 6.5rem;
   right: 10rem;
   left: 18rem;
-  transition: all 0.5s;
+  transition: all 0.5s ease-in-out;
   animation: fromTop 1.2s 4s backwards; }
   .navigation__nav--scrolled {
     top: 0;
