disable  pointer events for transition elements

--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,15 @@
 
 .fade-in {
   opacity: 0;
-  transition: opacity 1.3s; }
-
-.fade-in.appear {
-  opacity: 1; }
+  transition: opacity 1.3s;
+  pointer-events: none; }
+  .fade-in.appear {
+    opacity: 1; }
 
 .slide-in {
   opacity: 0;
-  transition: 3s; }
+  transition: 3s;
+  pointer-events: none; }
   .slide-in.left {
     transform: translateX(-100%); }
   .slide-in.right {
