--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -13,9 +13,9 @@
   &__content-box {
     @include absCenter;
     width: 70%;
-    @include mqRespond(mob) {
+    @include mqRespond(tab-port) {
       width: 80%;
-      height: 90vh;
+      max-height: 90vh;
       overflow-y: scroll;
     }
 
